@@ -1,3 +1,5 @@
+* Make description on subscription line optional
+
 Version 4.8.0 - 2018-04-23
 * Bug fixes (see mercurial logs for details)
 * Check pending subscription to erase party
